<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/etUsuario"
        android:hint="@string/usuario"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textEmailAddress"
        android:autofillHints="username"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/iniciar_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGoogle"
        android:text="@string/ingresar_con_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="8dp"/>
</LinearLayout>